Fixed image alignment

--- a/src/style.css
+++ b/src/style.css
@@ -41,4 +41,5 @@ img {
   width: 100%;
   height: 25rem;
   object-fit: contain;
+  object-position: top;
 }
